--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "build": "tsc -p ."
   },
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "graphql": "^16.6.0"
+    "graphql": "^16.6.0",
+    "mongoose": "^7.2.2"
   },
   "devDependencies": {
     "@apollo/server": "^4.7.1",
